some progress on slides